<resources>
    <string name="app_name">Lab4b</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_bill">Total Bill</string>
    <string name="tip_percentage">Tip Percentage</string>
    <string name="number_of_people">Number of People</string>
    <string name="calculate">Calculate</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
</resources>
